bin/tests/errors_parser/parser/parser_err_expected_array_dim.swg
#global fileprivate

enum A : [] s32 { Z } // swc-expected-error {{parser_err_expected_array_dim}}
